 This fixes the cache code so that responses can be cached if they have  an Expires header but no Etag or Last-Modified headers. PR 23130.  Submitted by: <bjorn@exoweb.net>  Reviewed by: Paul J. Reder

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@101231 13f79535-47bb-0310-9956-ffa450edef68